<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mt_bg"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    android:paddingStart="16dp"
    android:paddingTop="12dp"
    android:paddingEnd="16dp"
    android:paddingBottom="16dp">

    <TextView
        style="@style/mt_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:background="@drawable/mt_bg_tab_bar"
        android:orientation="horizontal"
        android:padding="6dp">

        <LinearLayout
            android:id="@+id/tabCalc"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/mt_tab_selected"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingTop="8dp"
            android:paddingBottom="8dp">
            <ImageView
                android:id="@+id/ivTabCalc"
                android:layout_width="22dp"
                android:layout_height="22dp"
                android:contentDescription="@string/tab_calculator"
                android:src="@drawable/mt_ic_calculator" />
            <TextView
                android:id="@+id/labelTabCalc"
                style="@style/mt_tab_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:text="@string/tab_calculator"
                android:textSize="10sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/tabLength"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/mt_tab_normal"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingTop="8dp"
            android:paddingBottom="8dp">
            <ImageView
                android:id="@+id/ivTabLength"
                android:layout_width="22dp"
                android:layout_height="22dp"
                android:contentDescription="@string/tab_length"
                android:src="@drawable/mt_ic_ruler" />
            <TextView
                android:id="@+id/labelTabLength"
                style="@style/mt_tab_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:text="@string/tab_length"
                android:textSize="10sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/tabWeight"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/mt_tab_normal"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingTop="8dp"
            android:paddingBottom="8dp">
            <ImageView
                android:id="@+id/ivTabWeight"
                android:layout_width="22dp"
                android:layout_height="22dp"
                android:contentDescription="@string/tab_weight"
                android:src="@drawable/mt_ic_weight" />
            <TextView
                android:id="@+id/labelTabWeight"
                style="@style/mt_tab_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:text="@string/tab_weight"
                android:textSize="10sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/tabTemperature"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/mt_tab_normal"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingTop="8dp"
            android:paddingBottom="8dp">
            <ImageView
                android:id="@+id/ivTabTemperature"
                android:layout_width="22dp"
                android:layout_height="22dp"
                android:contentDescription="@string/tab_temperature"
                android:src="@drawable/mt_ic_temperature" />
            <TextView
                android:id="@+id/labelTabTemperature"
                style="@style/mt_tab_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:text="@string/tab_temperature"
                android:textSize="10sp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/calcLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/mt_bg_surface"
            android:orientation="vertical"
            android:padding="20dp">
            <TextView
                android:id="@+id/tvExpression"
                style="@style/mt_expression"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/tvResult"
                style="@style/mt_result"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:text="0" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/calcKeys"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="12dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">
                <TextView
                    style="@style/mt_key_num"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:text="AC"
                    android:textSize="22sp" />
                <TextView
                    style="@style/mt_key_num"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:text="+/-"
                    android:textSize="22sp" />
                <TextView
                    style="@style/mt_key_num"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:text="%" />
                <TextView
                    style="@style/mt_key_op"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:text="&#247;" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">
                <TextView
                    style="@style/mt_key_num"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:text="7" />
                <TextView
                    style="@style/mt_key_num"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:text="8" />
                <TextView
                    style="@style/mt_key_num"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:text="9" />
                <TextView
                    style="@style/mt_key_op"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:text="&#215;" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">
                <TextView
                    style="@style/mt_key_num"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:text="4" />
                <TextView
                    style="@style/mt_key_num"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:text="5" />
                <TextView
                    style="@style/mt_key_num"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:text="6" />
                <TextView
                    style="@style/mt_key_op"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:text="&#8722;" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">
                <TextView
                    style="@style/mt_key_num"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:text="1" />
                <TextView
                    style="@style/mt_key_num"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:text="2" />
                <TextView
                    style="@style/mt_key_num"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:text="3" />
                <TextView
                    style="@style/mt_key_op"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:text="+" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">
                <TextView
                    style="@style/mt_key_num"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:layout_weight="2"
                    android:text="0" />
                <TextView
                    style="@style/mt_key_num"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:text="." />
                <TextView
                    style="@style/mt_key_op"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:text="=" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
